@@ -8,6 +8,8 @@ Bug fixes
 
 - Compressible model: fix inverted arguments for user velocity source terms.
 
+- Fixes to atmospheric chemistry model.
+
 - Fix build on Mac OS X.
 
 - Radiative model: fix GUI-defined BC selection between reflecting wall and
